set up tentative timeline block, vertical line height=100% results in vertical line not showing, still need to fix image size

--- a/styles/pp2.css
+++ b/styles/pp2.css
@@ -8,17 +8,18 @@
     width:100% !important;
     margin-top:-26px;
     margin-left:0px ;
-    font-family:"Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif; !important;
+    font-family:"Crimson Text", "Helvetica Neue", Helvetica, Arial, sans-serif; !important;
 }
 body {
     background-color: #ffffff;
-    font-family:"Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif; !important;
+    font-family:"Crimson Text", "Helvetica Neue", Helvetica, Arial, sans-serif; !important;
 }
 #bodyContent h1, #bodyContent h2, #bodyContent h3, #bodyContent h4, #bodyContent h5 {
-    font-family:"Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif; !important;
+    font-family: "Crimson Text", "Helvetica Neue", Helvetica, Arial, sans-serif; !important;
 }
 
 /********************************* HEADER  ********************************/
+
 .practices-banner-wrapper {
     margin-bottom: 100px;
     padding-left: 0;
@@ -45,7 +46,6 @@ body {
     webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
     text-align: center;
-    font-family: 'Crimson Text', serif;
     font-size: 65px;
     color: #000000;
 }
@@ -61,13 +61,8 @@ body {
 }
 
 .practices-overview {
-  font-family: 'Crimson Text', serif;
   font-size: 16px;
   line-height: normal;
-}
-
-.content {
-  font-family: 'Crimson Text', serif;
 }
 
 .tab-header {
@@ -84,3 +79,26 @@ body {
 }
 
 /********************************* END TABS  ********************************/
+
+/********************************* TIMELINE  ********************************/
+
+.timeline {
+  position: relative;
+}
+
+/* vertical line */
+.timeline::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 48%;
+  height: 100px;
+  width: 3px;
+  background: #000000;
+}
+
+.timeline-img {
+  width: 100%;
+}
+
+/********************************* END TIMELINE  ********************************/
